# PayPai

./: README.md
config/: default.toml
frontend/: package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/assets/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/app/wallet/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/transactions/: TransactionForm.tsx  TransactionHistory.tsx
frontend/src/components/wallet/: AssetList.tsx  WalletCreate.tsx  WalletImport.tsx
frontend/src/hooks/: useAssets.tsx  useTransactions.tsx  useWallet.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  storage.rs  wallet.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/wallet/: mod.rs
