[package]
name = "paypai"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0-beta", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
thiserror = "1.0"
ed25519-dalek = "2.0"
rand = "0.8"
base58 = "0.2"
aes-gcm = "0.10"
sha2 = "0.10"