[package]
name = "paypai"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.9", features = [] }
tauri-plugin-shell = "2.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.35", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
thiserror = "1.0"
ed25519-dalek = "2.0"
rand = "0.8"
base58 = "0.2"
aes-gcm = "0.10"
sha2 = "0.10"
